Fix for x overflow bug on smaller screens

--- a/src/App.scss
+++ b/src/App.scss
@@ -14,7 +14,7 @@
   left: 0;
   width: 100%;
   height: fit-content;
-
+  overflow-x: hidden;
   .layout {
     display: flex;
     flex-direction: column;
